--- a/mode.py/trunk/doc/tex/mode.tex
+++ b/mode.py/trunk/doc/tex/mode.tex
@@ -83,7 +83,7 @@ Given a mode, set the PYTHONMODE environment variable and refresh the module\'s
 boolean members. If given a bad mode, \exception{ValueError} is raised.
 \end{funcdesc}
 
-\begin{funcdesc}{setAPI}
+\begin{funcdesc}{setAPI}{}
 Refresh the module's boolean members. Call this if you ever change
 \envvar{PYTHONPATH} directly in the \code{os.environ} mapping.
 \end{funcdesc}
