--- a/mode.py/trunk/doc/tex/mode.tex
+++ b/mode.py/trunk/doc/tex/mode.tex
@@ -133,26 +133,40 @@ True
 (True, False)
 \end{verbatim}
 
+\chapter{Copyright and License}
+
+Copyright (c) 2006, Chad Whitacre <chad@zetaweb.com>. All rights reserved.
+
+Redistribution and use in source and binary forms, with or without modification,
+are permitted provided that the following conditions are met:
+
+\begin{itemize}
+
+\item{Redistributions of source code must retain the above copyright notice,
+this list of conditions and the following disclaimer.}
+
+\item{Redistributions in binary form must reproduce the above copyright notice,
+this list of conditions and the following disclaimer in the documentation and/or
+other materials provided with the distribution.}
+
+\item{Neither the name of Chad Whitacre nor the names of any other contributors
+or copyright holders may be used to endorse or promote products derived from
+this software without specific prior written permission.}
+
+\end{itemize}
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
+ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
+ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 
-% These are adding <Image> things to the last page, and I haven't cleaned up the
-% inputs for indexing anyway.
-%%
-%%  The ugly "%begin{latexonly}" pseudo-environments are really just to
-%%  keep LaTeX2HTML quiet during the \renewcommand{} macros; they're
-%%  not really valuable.
-%%
-%%  If you don't want the Module Index, you can remove all of this up
-%%  until the second \input line.
-%%
-%%begin{latexonly}
-%\renewcommand{\indexname}{Module Index}
-%%end{latexonly}
-%\input{mod\jobname.ind}		% Module Index
-%
-%%begin{latexonly}
-%\renewcommand{\indexname}{Index}
-%%end{latexonly}
-%\input{\jobname.ind}			% Index
+
 
 \end{document}
