--- a/mode.py/tags/1.0a1/doc/tex/mode.tex
+++ b/mode.py/tags/1.0a1/doc/tex/mode.tex
@@ -19,14 +19,14 @@
 	Email: \email{\ulink{chad@zetaweb.com}{mailto:chad@zetaweb.com}}
 }
 
-%\date{January 1, 1970} % update before release!
-\date\today
+\date{November 7, 2006} % update before release!
+%\date\today
 				% Use an explicit date so that reformatting
 				% doesn't cause a new date to be used.  Setting
 				% the date to \today can be used during draft
 				% stages to make it easier to handle versions.
 
-\release{1.0}			% release version; this is used to define the
+\release{1.0a1}			% release version; this is used to define the
 				% \version macro
 
 \makeindex			% tell \index to actually write the .idx file
