--- a/mode.py/trunk/doc/tex/mode.tex
+++ b/mode.py/trunk/doc/tex/mode.tex
@@ -66,7 +66,7 @@ The expectation is that various aspects of the application---logging, exception
 handling, data sourcing---will adapt to the current mode. The mode is set in the
 \envvar{PYTHONMODE} environment variable. This module provides API for
 interacting with this variable. If \envvar{PYTHONMODE} is unset, it will be set
-to development when this module is imported.
+to \code{development} when this module is imported.
 
 \chapter{API}
 
