--- a/mode.py/trunk/doc/tex/mode.tex
+++ b/mode.py/trunk/doc/tex/mode.tex
@@ -41,7 +41,7 @@
 
 \noindent
 mode.py is a Python module that models the life-cycle of an application as a
-series of four modes.
+series of four modes: debugging, development, staging, and production.
 
 \end{abstract}
 
