--- a/mode.py/trunk/doc/tex/mode.tex
+++ b/mode.py/trunk/doc/tex/mode.tex
@@ -79,7 +79,7 @@ Return the current \envvar{PYTHONMODE} setting as a lowercase string; will raise
 \end{funcdesc}
 
 \begin{funcdesc}{set}{mode}
-Given a mode, set the PYTHONMODE environment variable and refresh the module\'s
+Given a mode, set the PYTHONMODE environment variable and refresh the module's
 boolean members. If given a bad mode, \exception{ValueError} is raised.
 \end{funcdesc}
 
