--- a/daemon.py/trunk/README
+++ b/daemon.py/trunk/README
@@ -2,9 +2,9 @@
     INTRO
 ========================================
 
-This is mode.py, a Python module that models the life-cycle of an application as
-a series of four modes. You will find documentation inline in the module
-docstring, online at http://www.zetadev.com/software/mode.py/, and in the
+This is daemon.py, a Python implementation of the standard UNIX double-fork
+technique. You will find abundant documentation inline in the module docstrings
+and comments, online at http://www.zetadev.com/software/daemon.py/, and in the
 doc/ directory of this distribution.
 
 
@@ -12,30 +12,11 @@ doc/ directory of this distribution.
     LEGAL
 ========================================
 
-Copyright (c) 2006, Chad Whitacre <chad@zetaweb.com>
-All rights reserved.
+The original module is (c) 2005 by Chad J. Schroeder, and is used here under
+"the Python license," per ASPN's notice:
 
-Redistribution and use in source and binary forms, with or without modification,
-are permitted provided that the following conditions are met:
+    Except where otherwise noted, recipes in the Python Cookbook are published
+    under the Python license <http://www.python.org/license>.
 
-  * Redistributions of source code must retain the above copyright notice, this
-    list of conditions and the following disclaimer.
-
-  * Redistributions in binary form must reproduce the above copyright notice,
-    this list of conditions and the following disclaimer in the documentation
-    and/or other materials provided with the distribution.
-
-  * Neither the name of Chad Whitacre nor the names of any other contributors
-    or copyright holders may be used to endorse or promote products derived
-    from this software without specific prior written permission.
-
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
-ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
-ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
-(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
-LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
-ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+My changes are (c) 2006 Chad Whitacre <chad@zetaweb.com>, and are offered under
+the same license.
