trying to get ~~VERSION~~ working

--- a/httpy/trunk/README
+++ b/httpy/trunk/README
@@ -10,6 +10,13 @@ the module's docstrings, and online at:
 
 
 ========================================
+    VERSION
+========================================
+
+~~VERSION~~
+
+
+========================================
     LEGAL
 ========================================
 
