--- a/httpy/trunk/doc/tex/httpy.tex
+++ b/httpy/trunk/doc/tex/httpy.tex
@@ -15,7 +15,7 @@
 % the rest is at your discretion.
 \authoraddress{
 	Zeta Design \&\ Development \\
-	\url{http://www.zetadev.com/software/mode.py/} \\
+	\url{http://www.zetadev.com/software/httpy/} \\
 	Email: \email{\ulink{chad@zetaweb.com}{mailto:chad@zetaweb.com}}
 }
 
